# heidi-kernel

./: .clang-format  .clang-tidy  .gitignore  .gitignore.tmpdiag  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md
.github/: pull_request_template.md
.github/pull_requests/: template.md
.github/workflows/: ci.yml  nightly-sanitizers.yml  release.yml
.local/: CONTEXT_MEMORY.md  DEV_SKILLSETS.md  INDEX.md  RULES.md  RULES_CPP.md  SECRETS_POLICY.md  TODO.md  WORKLOG_RULE.md
.local/ack/: _template.md
.local/secrets/: _template.md
.local/tasks/: 0001-governance-baseline.md  0002-daemon-mvp-uds-ping-shutdown.md  0003-bounded-queue-scheduler.md  0004-process-manager-pgroup-reaper.md
.local/worklog/: _template.md
app/: CMakeLists.txt  main.cpp
build_gcc/: CMakeCache.txt  CTestTestfile.cmake  Makefile  build_output.txt  cmake_install.cmake
build_gcc/src/: Makefile  cmake_install.cmake
build_gcc/src/dashd/: Makefile  cmake_install.cmake  heidi-dashd
build_gcc/src/kernel/: Makefile  cmake_install.cmake
build_gcc/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  unit_tests[1]_include.cmake
docs/: ARCHITECTURE.md  CI_OVERVIEW.md  DEPENDENCIES.md  DEV_QUICKSTART.md  GOVERNANCE.md  GOVERNOR.md  IPC.md  ONBOARDING.md  PROCESS_POLICY.md  RELEASE.md  RELEASE_NOTES.md  RESOURCE_GOVERNOR.md  TROUBLESHOOTING.md  WSL2.md  branch_protection.md  ui-removed.md
include/heidi-kernel/: cgroup_driver.h  config.h  daemon.h  event.h  event_loop.h  gov_rule.h  group_policy_store.h  http.h  ipc.h  job.h  logger.h  metrics.h  policy_store.h  process_governor.h  process_inspector.h  resource_governor.h  result.h  ring_buffer.h  status.h
scripts/: bootstrap.sh  build.ps1  build.sh  dashboard_snapshot.sh  format.ps1  format.sh  governance-gate.sh  lint.ps1  lint.sh  pre-commit-validate.sh  scan_secrets.ps1  scan_secrets.sh  setup-dev.sh  smoke.ps1  smoke.sh  test.sh  validate-environment.sh  verify_local.sh
src/: CMakeLists.txt  config.cpp  event_loop.cpp  logger.cpp  result.cpp
src/common/: status.cpp  status.hpp
src/config/: policy_store.cpp
src/daemon/: CMakeLists.txt  daemon.cpp  main.cpp
src/dashd/: CMakeLists.txt  http.cpp  main.cpp
src/governor/: CMakeLists.txt  cgroup_driver.cpp  gov_rule.cpp  group_policy_store.cpp  process_governor.cpp  resource_governor.cpp
src/ipc/: CMakeLists.txt  ipc.cpp
src/job/: CMakeLists.txt  job.cpp  process_inspector_procfs.cpp  procfs_starttime.cpp  procfs_starttime.h
src/kernel/: CMakeLists.txt  main.cpp  status.cpp
src/metrics/: CMakeLists.txt  sampler.cpp
src/tools/: CMakeLists.txt  hkctl.cpp  kernelctl.cpp
tasks/: README.md  _template.md
tests/: CMakeLists.txt  benchmark_status_socket.cpp  http_test.cpp  main.cpp  test_config.cpp  test_event_loop.cpp  test_gov_rule.cpp  test_governor.cpp  test_group_policy_store.cpp  test_http.cpp  test_http_parser.cpp  test_http_shutdown.cpp  test_ipc.cpp  test_job.cpp  test_job_fakes.h  test_logger.cpp  test_metrics.cpp  test_policy_store.cpp  test_result.cpp  test_utils.h
tests/helpers/: hk_forkbomb_safe.cpp  hk_sleep.cpp
tests/integration/: CMakeLists.txt  test_integration.cpp
